doumentation for update, show, delete account
