# app/Http/Requests/Accounts/AccountUpdateRequest.php
@@ -11,7 +11,7 @@ class AccountUpdateRequest extends ApiFormRequest
     public function rules(): array
     {
         return [
-            'email' 					=> 'required_without:phone_number|unique:accounts,email,NULL,id,deleted_at,NULL' ,
+            'email' 					=> 'required_without:phone_number|unique:accounts,email,'.$this->account->id.',id,deleted_at,NULL' ,
             'phone_number' 				=> 'required_without:email|unique:accounts,phone_number,NULL,id,deleted_at,NULL' ,
             'password' 					=> 'required|string' ,
         ];
